쏙쏙 들어오는 함수형 코딩 : 8장

--- a/쏙쏙 들어오는 함수형 코딩/8장.md
+++ b/쏙쏙 들어오는 함수형 코딩/8장.md
@@ -64,9 +64,9 @@
 
 호출 그래프를 만들어 함수 호출을 시각화하기
 
-![alt text](image-2.png)
+![image](https://github.com/Hellol77/Study/assets/76903801/b43c2f7c-a292-4a0c-9456-9709fa6875d5)
 
-![alt text](image.png)
+![image](https://github.com/Hellol77/Study/assets/76903801/b0c48f2e-98bb-4efb-b475-4f4db3210444)
 
 ### 3단계 줌 래벨
 
@@ -76,7 +76,7 @@
 
 같은 길이의 화살표를 가지는 방법은 중간에 함수를 두는 것입니다.
 
-![alt text](image-1.png)
+![image](https://github.com/Hellol77/Study/assets/76903801/bff59bcb-72da-4ee1-9557-8a7da50a277b)
 
 
 ### 직접 구현 패턴 리뷰
